--- a/index.html
+++ b/index.html
@@ -350,67 +350,67 @@
 
     // Brands data (your list)
     const brands = [
-      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis',
+      { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'}, {label:'Magnesium', val:'1.3 mg/L'}, {label:'Sodium', val:'2.3 mg/L'}, {label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'gold', name: 'Gold Water', img: 'https://i.postimg.cc/nr7cPzVK/gold-w.webp', brandDisplay: 'Gold Water - For Golden life',
+      { id: 'gold', name: 'Gold Water', img: 'https://i.postimg.cc/nr7cPzVK/gold-w.webp', brandDisplay: 'Gold Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'TDS', val:'8.5 mg/L'}, {label:'Calcium', val:'1.6 mg/L'}, {label:'Magnesium', val:'0.8 mg/L'}, {label:'Potassium', val:'8.5 mg/L'}, {label:'Sodium', val:'0.9 mg/L'}]
       },
-      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water',
+      { id: 'top', name: 'Top water', img: 'https://i.postimg.cc/4dGs4htb/top.webp', brandDisplay: 'Top Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'one', name: 'One water', img: 'https://i.postimg.cc/Vvf49NBk/one-water.jpg', brandDisplay: 'One Water',
+      { id: 'one', name: 'One water', img: 'https://i.postimg.cc/Vvf49NBk/one-water.jpg', brandDisplay: 'One Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'africa', name: 'Africa water', img: 'https://i.postimg.cc/0NGB7hR3/africa.jpg', brandDisplay: 'Africa Water',
+      { id: 'africa', name: 'Africa water', img: 'https://i.postimg.cc/0NGB7hR3/africa.jpg', brandDisplay: 'Africa Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'yes', name: 'Yes water', img: 'https://i.postimg.cc/rw1JHWnJ/yes.webp', brandDisplay: 'Yes Water',
+      { id: 'yes', name: 'Yes water', img: 'https://i.postimg.cc/rw1JHWnJ/yes.webp', brandDisplay: 'Yes Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'dega', name: 'Dega water', img: 'https://i.postimg.cc/9FG86vz9/dega.webp', brandDisplay: 'Dega Water',
+      { id: 'dega', name: 'Dega water', img: 'https://i.postimg.cc/9FG86vz9/dega.webp', brandDisplay: 'Dega Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'arki', name: 'Arki water', img: 'https://i.postimg.cc/TwDqrDDf/arki.webp', brandDisplay: 'Arki Water',
+      { id: 'arki', name: 'Arki water', img: 'https://i.postimg.cc/TwDqrDDf/arki.webp', brandDisplay: 'Arki Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'forest', name: 'Forest water', img: 'https://i.postimg.cc/bYFW3tJV/forest.webp', brandDisplay: 'Forest Water',
+      { id: 'forest', name: 'Forest water', img: 'https://i.postimg.cc/bYFW3tJV/forest.webp', brandDisplay: 'Forest Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'kiya', name: 'kiya water', img: 'https://i.postimg.cc/TYMSzXV0/kiya.webp', brandDisplay: 'Kiya Water',
+      { id: 'kiya', name: 'kiya water', img: 'https://i.postimg.cc/TYMSzXV0/kiya.webp', brandDisplay: 'Kiya Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'sport', name: 'Sport water', img: 'https://i.postimg.cc/9McHHHH5/sport.webp', brandDisplay: 'Sport Water',
+      { id: 'sport', name: 'Sport water', img: 'https://i.postimg.cc/9McHHHH5/sport.webp', brandDisplay: 'Sport Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'fham', name: 'Fham water', img: 'https://i.postimg.cc/wjqVSMCp/fham.jpg', brandDisplay: 'Fham Water',
+      { id: 'fham', name: 'Fham water', img: 'https://i.postimg.cc/wjqVSMCp/fham.jpg', brandDisplay: 'Fham Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'care', name: 'Care water', img: 'https://i.postimg.cc/15NtYv7K/care.webp', brandDisplay: 'Care Water',
+      { id: 'care', name: 'Care water', img: 'https://i.postimg.cc/15NtYv7K/care.webp', brandDisplay: '/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'wow', name: 'Wow water', img: 'https://i.postimg.cc/Gh1fD2DQ/wow.webp', brandDisplay: 'Wow Water',
+      { id: 'wow', name: 'Wow water', img: 'https://i.postimg.cc/Gh1fD2DQ/wow.webp', brandDisplay: 'Wow Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'konjo', name: 'Konjo water', img: 'https://i.postimg.cc/gkYDd68Y/konjo.jpg', brandDisplay: 'Konjo Water',
+      { id: 'konjo', name: 'Konjo water', img: 'https://i.postimg.cc/gkYDd68Y/konjo.jpg', brandDisplay: 'Konjo Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       },
-      { id: 'eden', name: 'Eden water', img: 'https://i.postimg.cc/xCnkHL01/eden.webp', brandDisplay: 'Eden Water',
+      { id: 'eden', name: 'Eden water', img: 'https://i.postimg.cc/xCnkHL01/eden.webp', brandDisplay: 'Eden Water/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
         nutrition: [{label:'Calcium', val:'0.4 mg/L'},{label:'Magnesium', val:'1.3 mg/L'},{label:'Sodium', val:'2.3 mg/L'},{label:'TDS', val:'20 mg/L'}]
       }
