--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     .brand-section {
       display: none;
-      padding: 16px 16px 120px;   /* extra bottom space for cart button */
+      padding: 16px 16px 120px;
       background: var(--tg-bg-color);
       margin: 0;
     }
@@ -212,6 +212,47 @@
     }
     #cart-summary.visible { transform: translateY(0); }
 
+    /* ─── NEW CLOSE BUTTON STYLES ─── */
+    .cart-close-btn {
+      position: absolute;
+      top: 12px;
+      right: 16px;
+      width: 36px;
+      height: 36px;
+      background: transparent;
+      border: none;
+      border-radius: 50%;
+      font-size: 28px;
+      font-weight: 300;
+      color: var(--tg-text-color);
+      opacity: 0.7;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      line-height: 1;
+      z-index: 10;
+      transition: all 0.18s ease;
+    }
+
+    .cart-close-btn:hover,
+    .cart-close-btn:focus {
+      opacity: 1;
+      background: rgba(0,0,0,0.08);
+    }
+
+    body.dark .cart-close-btn:hover,
+    body.dark .cart-close-btn:focus {
+      background: rgba(255,255,255,0.12);
+    }
+
+    .cart-close-btn:active {
+      transform: scale(0.92);
+      opacity: 0.9;
+    }
+    /* ───────────────────────────────── */
+
     #cart-items { list-style: none; margin: 12px 0 20px; max-height: 260px; overflow-y: auto; }
     .cart-item {
       display: flex;
@@ -299,8 +340,10 @@
 
   <div id="no-results">No brands found</div>
 
-  <!-- Cart -->
+  <!-- Cart with close button -->
   <div id="cart-summary">
+    <button id="close-cart-btn" class="cart-close-btn">×</button>
+
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
       <h2 style="margin:0; font-size:20px;">Your Cart</h2>
       <span id="cart-count" style="background:rgba(46,125,50,0.2); color:var(--accent); padding:6px 14px; border-radius:20px; font-weight:bold;">0</span>
@@ -556,14 +599,12 @@
       tg.MainButton.show();
     }
 
-    // Navigation – FIXED: instant view at top, no scrolling required
+    // Navigation
     function showBrand(id) {
-      // Hide main UI elements
       document.querySelector('.top-controls').style.display = 'none';
       document.querySelector('.categories').style.display = 'none';
       document.getElementById('no-results').style.display = 'none';
 
-      // Show only the selected brand
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
       const section = document.getElementById(`${id}-section`);
       if (section) {
@@ -572,15 +613,12 @@
 
       tg.BackButton.show();
       tg.HapticFeedback.impactOccurred('light');
-
-      // Force content to appear at the very top – no scroll needed
       window.scrollTo({ top: 0, behavior: 'instant' });
     }
 
     function returnToMainView() {
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
 
-      // Restore main UI
       document.querySelector('.top-controls').style.display = 'flex';
       document.querySelector('.categories').style.display = 'grid';
       document.getElementById('no-results').style.display = 'none';
@@ -608,7 +646,7 @@
       tg.HapticFeedback.impactOccurred('light');
     });
 
-    // Event delegation
+    // Event delegation (updated with close button handler)
     document.addEventListener('click', e => {
       const t = e.target;
 
@@ -621,6 +659,13 @@
         const index = Number(t.dataset.index);
         const delta = Number(t.dataset.delta);
         if (!isNaN(index)) changeQty(index, delta);
+      }
+
+      // ─── NEW: Close cart button ───
+      if (t.id === 'close-cart-btn') {
+        document.getElementById('cart-summary').classList.remove('visible');
+        tg.BackButton.hide();
+        tg.HapticFeedback.impactOccurred('light');
       }
     });
 
