--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
   <div id="no-results">No brands found</div>
 
-  <!-- Cart panel -->
+  <!-- Cart -->
   <div id="cart-summary">
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
       <h2 style="margin:0; font-size:20px;">Your Cart</h2>
@@ -347,7 +347,7 @@
     applyTheme();
     tg.onEvent('themeChanged', applyTheme);
 
-    // Brands data
+    // Brands data (all 16 brands)
     const brands = [
       { id: 'aquaddis', name: 'Aquaddis', img: 'https://i.postimg.cc/dVD0gdmt/aquaddis.webp', brandDisplay: 'Aquaddis/ Agents',
         variants: [{size:'0.3L', price:140}, {size:'0.6L', price:150}, {size:'2L', price:160}],
@@ -415,7 +415,6 @@
       }
     ];
 
-    // Generate UI dynamically
     const categoriesEl = document.getElementById('categories');
 
     brands.forEach(brand => {
@@ -505,6 +504,21 @@
       tg.HapticFeedback.impactOccurred('light');
     }
 
+    function clearCartAndReturnToMain() {
+      cart = [];
+      saveCart();
+      document.getElementById('cart-summary').classList.remove('visible');
+      tg.MainButton.hide();
+      tg.BackButton.hide();
+
+      // Return to main brands page
+      document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
+      document.querySelector('.top-controls').style.display = 'flex';
+      document.querySelector('.categories').style.display = 'grid';
+      document.getElementById('no-results').style.display = 'none';
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
     function renderCart() {
       const list = document.getElementById('cart-items');
       const totalEl = document.getElementById('total');
@@ -513,7 +527,6 @@
 
       list.innerHTML = '';
       let total = 0;
-      let itemsCount = 0;
 
       if (cart.length === 0) {
         emptyEl.style.display = 'block';
@@ -531,7 +544,6 @@
       cart.forEach((item, i) => {
         const line = item.price * item.qty;
         total += line;
-        itemsCount += item.qty;
 
         const li = document.createElement('li');
         li.className = 'cart-item';
@@ -552,21 +564,14 @@
       tg.MainButton.show();
     }
 
-    // Navigation logic
-    let currentBrandId = null;  // remember which brand detail is open
-
     function showBrand(id) {
-      currentBrandId = id;
-
       document.querySelector('.top-controls').style.display = 'none';
       document.querySelector('.categories').style.display = 'none';
       document.getElementById('no-results').style.display = 'none';
 
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
       const section = document.getElementById(`${id}-section`);
-      if (section) {
-        section.classList.add('active');
-      }
+      if (section) section.classList.add('active');
 
       tg.BackButton.show();
       tg.HapticFeedback.impactOccurred('light');
@@ -574,8 +579,6 @@
     }
 
     function returnToMainView() {
-      currentBrandId = null;
-
       document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
 
       document.querySelector('.top-controls').style.display = 'flex';
@@ -588,32 +591,14 @@
     }
 
     tg.BackButton.onClick(() => {
-      const brandIsVisible = !!currentBrandId;
-      const cartIsVisible  = document.getElementById('cart-summary').classList.contains('visible');
+      const cartIsVisible = document.getElementById('cart-summary').classList.contains('visible');
 
       if (cartIsVisible) {
-        // Close cart → go back to previous view (brand or main)
         document.getElementById('cart-summary').classList.remove('visible');
         tg.MainButton.hide();
-
-        if (brandIsVisible) {
-          // Was in brand detail before cart → return to that brand
-          document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
-          const section = document.getElementById(`${currentBrandId}-section`);
-          if (section) section.classList.add('active');
-          document.querySelector('.top-controls').style.display = 'none';
-          document.querySelector('.categories').style.display = 'none';
-        } else {
-          // Was in main list → return to main list
-          document.querySelector('.top-controls').style.display = 'flex';
-          document.querySelector('.categories').style.display = 'grid';
-          tg.BackButton.hide();
-        }
-      } else if (brandIsVisible) {
-        // Close brand detail → back to main list
-        returnToMainView();
+        tg.BackButton.hide();
       } else {
-        // On main list → let Telegram close the Mini App
+        returnToMainView();
       }
 
       tg.HapticFeedback.impactOccurred('light');
@@ -679,6 +664,7 @@
 
     // Init
     loadCart();
+
     tg.MainButton.onClick(() => {
       if (!cart.length) return;
 
@@ -700,10 +686,25 @@
       if (!confirm(msg + "\n\nConfirm order?")) return;
 
       tg.showAlert("✅ Order placed! We will contact you soon.\nThank you! 💧");
-      cart = [];
-      renderCart();
-      saveCart();
+
+      // After order: clear cart + return to main brands page
+      clearCartAndReturnToMain();
     });
+
+    function clearCartAndReturnToMain() {
+      cart = [];
+      saveCart();
+      document.getElementById('cart-summary').classList.remove('visible');
+      tg.MainButton.hide();
+      tg.BackButton.hide();
+
+      // Force return to main brands page
+      document.querySelectorAll('.brand-section').forEach(el => el.classList.remove('active'));
+      document.querySelector('.top-controls').style.display = 'flex';
+      document.querySelector('.categories').style.display = 'grid';
+      document.getElementById('no-results').style.display = 'none';
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 
   </script>
 </body>
